Feature: Tela consulta eSocial. Routes, controller, test, service e swagger do eSocial
