# api/routes/etecRoutes.js
@@ -7,5 +7,6 @@ const etecController = require('../controllers/etecController');
 // Define rotas usando as funções do controller
 router.post('/calcularCustoMensal', etecController.calcularCustoMensal);
 router.post("/calcularFerias", etecController.calcularFerias);
+router.post("/calcularESocial", etecController.calcularESocial);
 
 module.exports = router;
